# stringjax_tools

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
documentation/source/: conf.py  index.rst  stringjax_tools.auto_vectorise.rst  stringjax_tools.cache.rst  stringjax_tools.jit.rst  stringjax_tools.pytrees.rst  stringjax_tools.rst  stringjax_tools.vmap.rst  tutorials.rst  usage.md
documentation/source/_autosummary/: stringjax_tools.auto_vectorise.ArgSpec.rst  stringjax_tools.auto_vectorise.auto_vmap.rst  stringjax_tools.auto_vectorise.auto_vmap_default_shapes.rst  stringjax_tools.auto_vectorise.auto_vmap_defaults.rst  stringjax_tools.auto_vectorise.clear_auto_vmap_caches.rst  stringjax_tools.auto_vectorise.get_auto_vmap_default_shapes.rst  stringjax_tools.auto_vectorise.get_auto_vmap_defaults.rst  stringjax_tools.auto_vectorise.reset_auto_vmap_default_shapes.rst  stringjax_tools.auto_vectorise.reset_auto_vmap_defaults.rst  stringjax_tools.auto_vectorise.set_auto_vmap_default_shapes.rst  stringjax_tools.auto_vectorise.set_auto_vmap_defaults.rst  stringjax_tools.cache.configure_compilation_cache.rst  stringjax_tools.jit.is_static.rst  stringjax_tools.jit.jit_with_dynamic_static_args.rst  stringjax_tools.jit.jit_with_static_args.rst  stringjax_tools.pytrees.PytreePolicy.rst  stringjax_tools.pytrees.flatten_func.rst  stringjax_tools.pytrees.make_pytree_flatteners.rst  stringjax_tools.pytrees.unflatten_func_class.rst  stringjax_tools.vmap.clear_vmap_caches.rst  (+2 more)
src/stringjax_tools/: __init__.py  __main__.py  _utils.py  auto_vectorise.py  cache.py  jit.py  pytrees.py  vmap.py
src/stringjax_tools.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_auto_vectorise.py  test_transforms_and_pytrees.py
(+8 files in other folders)
